<resources>
    <string name="app_name">WBS</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="EMPTY"></string>
    <string name="CONTROL_BACK">Zurück</string>
    <string name="CONTROL_NEXT">Weiter</string>

    <string name="CPA_Header">Profil anlegen</string>
    <string name="CPA_Name">Meine Name:</string>
    <string name="CPA_Edit_Name">Name</string>
    <string name="CPA_Sex">Meine Geschlecht:</string>
    <string name="CPA_Fmale">weiblich</string>
    <string name="CPA_Male">männlich</string>
    <string name="CPA_Age">Ich bin </string>
    <string name="CPA_Edit_Age">Alter</string>
    <string name="CPA_Age2">Jahre alt.</string>
    <string name="CPA_Color">Lieblingsfarbe:</string>

    <string name="FCA_Header">Wähle deinen Begleiter aus:</string>
    <string name="FCA_FollowerIconDescription">Bild deines Begleiters</string>

    <string name="MA_Click">Klick mich!</string>

    <string name="SPA_Head">Profil</string>
    <string name="SPA_Edit">Profil bearbeiten</string>
    <string name="SPA_Delete">Profil löschen</string>
    <string name="SPA_Name">Name</string>
    <string name="SPA_Sex">Geschlecht</string>
    <string name="SPA_Age">Alter</string>
    <string name="SPA_Color">Lieblingsfarbe</string>
    <string name="SPA_Rewards">Belohnungen</string>
    <string name="SPA_Stars">Sterne</string>
    <string name="SPA_Follower">Begleiter</string>

    <string name="ENWA_Header">Willkommen in</string>
    <string name="ENWA_Map">Karte</string>
    <string name="ENWA_Europe">Europa</string>
    <string name="ENWA_America">Amerika</string>

    <string name="title_activity_menu__test">Menu_Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="NAV_menu_profile">Profil</string>
    <string name="NAV_title_menu_shop">Shop</string>
    <string name="NAV_menu_shop_shop">Shop</string>
    <string name="NAV_title_menu_extras">Extras</string>
    <string name="NAV_menu_extras_todolist">ToDo - Liste</string>
    <string name="NAV_menu_extras_settings">Einstellung</string>

    <string name="close">close</string>
    <string name="open">open</string>
    <string name="ENWA_Africa">Afrika</string>
</resources>
